trying to inject a method inside each controller that has a compiled fxml